Add basic Java 9 compatibility instructions to the user guide